--- a/qualification.html
+++ b/qualification.html
@@ -35,6 +35,7 @@
         }
         .basic_info{
             margin:40px 0;
+            position: relative;
         }
         .profile_image_upload img,input,textarea {
             display: inline-block;
@@ -67,7 +68,29 @@
             outline: none;
             border: none;
         }
-
+        .introduce{
+            width: 500px;
+            height: 100px;
+            vertical-align: middle;
+            resize: none;
+            margin-right: 10px;
+            font-size: 20px;
+        }
+        .counting_characters{/*글자 수 카운티 글*/
+            font-size: 10px;
+            position: absolute;
+            bottom:10px;
+            left: 450px;
+        }
+        .profile_introduce_upload{
+            position: relative;
+        }
+        .profile_image_upload{
+            position: relative;
+        }
+        textarea,input:focus{
+            outline-color: #ff6333;
+        }
     </style>
 </head>
 <body>
@@ -163,7 +186,7 @@
                     <div class="profile_image_upload">
                         <label>
                             <h3>프로필 사진</h3>
-                            <img src="" width="60" height="60"/>
+                            <img src="img/default.jpg" width="60" height="60"/>
                             <input type="file" id="profile" name="profile"/>
                         </label>
                         </dd>
@@ -171,7 +194,8 @@
                     <div class="profile_introduce_upload">
                         <label>
                             <h3>간단한 자기소개</h3>
-                            <textarea class="introduce" placeholder="내용을 입력해 주세요"></textarea>
+                            <textarea maxlength="100" class="introduce" placeholder="내용을 입력해 주세요"></textarea>
+                            <span class="counting_characters">(0/100자)</span>
                         </label>
                     </div>
                 </div>
@@ -205,11 +229,71 @@
 
     </div><!--//footer_container end-->
 </div><!--//footer end-->
+
+
 <script src="js/jquery.js"></script>
 <script src="js/default.js"></script>
 <script>
     const $addSubjectiveQuestion = $('.add_subjective_question');
     const $addFileAttachmentQuestion = $('.add_file_attachment_question');
+
+    const $crewImageSelectedImg = $('.crew_image_selected img');
+
+    const $crewImageItem = $('.crew_image_item input');
+
+    $crewImageItem.change(function (e) {
+        e.preventDefault();
+        let src = $(this).next().children().data("src");
+        console.log("crewImageItemChange: " + src);
+        // $(this).children().attr("checked","checked");
+        $crewImageSelectedImg.attr("src", src);
+    });
+
+    $("#profile").on("change",function() {
+
+        const file = this.files[0];
+        console.log("file: "+ file);
+
+        //image/ 로 시작하는
+
+        if (/^image\//.test(file.type)) {
+
+            //alert("여기에 오면 파일이 있고 사진임");
+
+            //multipart/form-data에 필요함
+            const formData = new FormData();
+
+            formData.append("uploadImg", file, file.name);
+            formData.append("type", "B");//B는 board의 줄임말
+
+            //여기서 ajax로 파일 업로드 수행
+            $.ajax({
+                url:"ajax/uploadImage.json",
+                processData : false,//multipart/form-data
+                contentType : false,//multipart/form-data
+                data : formData,//multipart/form-data
+                type : 'POST',//multipart/form-data
+                dataType : "json",
+                error : function(xhr, error, code) {
+                    alert("에러:" + code);
+                },
+                success:function(json) {
+                    console.log("ajax 실행:"+json.url);
+                    $('.profile_image_upload img').attr("src",json.url);
+                }
+            });
+        } else {
+            alert("이미지를 선택해주세요!");
+        }
+    });
+
+
+
+    $('.introduce').keyup(function (e){
+        let val = $(this).val();
+        val = val.substr(0,100);
+        $('.counting_characters').text("("+val.length+" /100자)");    //글자수 실시간 카운팅
+    });
 </script>
 </body>
 </html>
