--- a/글수정.html
+++ b/글수정.html
@@ -12,9 +12,9 @@
         html{
             background-color: rgba(0,0,0,.5);
         }
-        #popEdit{
-            width: 630px;
-            min-height: 600px;
+        #popWrite{
+            width: 600px;
+            max-height: 799px;
             position: fixed;
             left: 50%;
             top:40%;
@@ -24,30 +24,40 @@
         .disappear_view{
             display: none;
         }
-        #popEdit h2{
+        #popWrite h2{
             margin:20px 0;
             font-size: 20px;
             font-weight: 700;
             text-align: center;
         }
-
+        #standalone-container{
+            width: 560px;
+            padding: 0 20px;
+        }
+        #toolbar-container{
+            background-color: silver;
+        }
         #editorContainer {
-            width:610px;
-            padding:0 10px;
-            height: 642px;
+            width:560px;
+            min-height: 250px;
+            max-height: 600px;
             position: relative;
         }
-        #editor {
-            padding-left:20px;
-            height:500px;
+        .ql-formats{
+        }
+        .ql-editor{
+            min-height: 250px;
+            max-height: 600px;
         }
         .ql-toolbar.ql-snow{
             border: none;
             border-bottom: 1px solid #424242;
+            background-color: #fafafa;
         }
         .ql-container.ql-snow{
             border: none;
             border-bottom: 1px solid #424242;
+            background-color: #fafafa;
         }
         .editor_write_images{
             margin-bottom: 10px;
@@ -69,9 +79,9 @@
             cursor: pointer;
         }
         .editor_upload_box{
-            position: absolute;
-            left: 60px;
-            bottom: 0px;
+            position: relative;
+            left: 20px;
+            bottom: 0;
             margin: 20px 0;
         }
         .post_submit_btn{
@@ -91,61 +101,193 @@
             font-size: 20px;
             cursor: pointer;
         }
+        p>img{
+            user-select: none;
+            cursor: pointer;
+
+        }
+        p>img:hover{
+            border: 5px solid #00C853;
+        }
     </style>
 </head>
 <body>
-<div id="popEdit">
-    <h2>글수정</h2>
-    <!-- 에디터 감싸는 컨테이너 -->
-    <div id="editorContainer">
-        <!-- 에디터 -->
-        <div id="editor"></div>
-        <div class="editor_upload_box">
-            <ul class="editor_write_images">
-                <li>
-                    <label for="image_input"><i class="far fa-image"></i>
-                    </label>
-                    <input id="image_input" type="file" style="display: none;"/>
-                </li>
-                <li>
-                    <label for="file_input"><i class="fas fa-paperclip"></i>
-                    </label>
-                    <input id="file_input" type="file" style="display: none;"/>
-                </li>
-            </ul>
-            <div class="editor_write_form">
-                <form>
-                    <!-- 질문 2 : fieldset 추가 적당한지-->
-                    <fieldset>
-                        <div>
-                            <label for="post_top_input">게시글 상위 고정</label>
-                            <input type="checkbox" id="post_top_input" name="post_top" value="T"/><!--질문 3: value 뭐가 좋을지? -->
-                        </div>
-                        <div>
-                            <label for="post_all_input">모두에게 공개</label>
-                            <input type="checkbox" id="post_all_input" name="post_all" value="A"/><!--질문 3: value 뭐가 좋을지? -->
-                        </div>
-                        <div class="post_submit_btn"><button type="submit">작성</button></div>
-                    </fieldset>
-                </form>
-            </div><!--//container_form end-->
-        </div><!--//editor_upload_box end-->
-    </div><!--//editorContainer end-->
-    <div class="close"><i class="fas fa-times"></i></div>
+<div id="popWrite">
+    <form id="writeForm">
+        <!-- 질문 2 : fieldset 추가 적당한지-->
+        <fieldset>
+            <input type="hidden" id="contents" name="contents" />
+            <h2>글수정</h2>
+            <div id="standalone-container">
+                <div id="toolbar-container">
+                    <span class="ql-formats">
+                      <select class="ql-size">
+                        <option>20px</option>
+                        <option>28px</option>
+                        <option>36px</option>
+                        <option>48px</option>
+                      </select>
+                    </span>
+                    <span class="ql-formats">
+                        <button class="ql-bold"></button>
+                        <button class="ql-italic"></button>
+                        <button class="ql-underline"></button>
+                        <button class="ql-strike"></button>
+                        <select class="ql-color"></select>
+                    </span>
+<!--                    <span class="ql-formats">-->
+
+<!--                      배경색<select class="ql-background"></select>-->
+<!--                    </span>-->
+<!--                    목차<span class="ql-formats">-->
+<!--                      <button class="ql-list" value="ordered"></button>-->
+<!--                      <button class="ql-list" value="bullet"></button>-->
+<!--                      <button class="ql-indent" value="-1"></button>-->
+<!--                      <button class="ql-indent" value="+1"></button>-->
+<!--                    </span>-->
+
+                    <!--파일 업로드 부분-->
+                    <!--                    <span class="ql-formats">-->
+                    <!--                      <button class="ql-link"></button>-->
+                    <!--                      <button class="ql-image"></button>-->
+                    <!--                    </span>-->
+                </div>
+                <!-- 에디터 감싸는 컨테이너 -->
+                <div id="editorContainer"></div>
+                <!-- 에디터 -->
+                <div class="editor_upload_box">
+                    <ul class="editor_write_images">
+                        <li>
+                            <label for="image_input"><i class="far fa-image"></i>
+                            </label>
+                            <input id="image_input" type="file" style="display: none;"/>
+                        </li>
+                        <li>
+                            <label for="file_input"><i class="fas fa-paperclip"></i>
+                            </label>
+                            <input id="file_input" type="file" style="display: none;"/>
+                        </li>
+                    </ul>
+                    <div>
+                        <label for="post_top_input">게시글 상위 고정</label>
+                        <input type="checkbox" id="post_top_input" name="post_top" value="T"/><!--질문 3: value 뭐가 좋을지? -->
+                    </div>
+                    <div>
+                        <label for="post_all_input">모두에게 공개</label>
+                        <input type="checkbox" id="post_all_input" name="post_all" value="A"/><!--질문 3: value 뭐가 좋을지? -->
+                    </div>
+                    <div class="post_submit_btn"><button type="submit">저장</button></div>
+                </div><!--//editor_upload_box end-->
+                <div class="close"><i class="fas fa-times"></i></div>
+            </div>
+        </fieldset>
+    </form>
 </div>
 <script src="js/quill.core.js"></script>
 <script src="js/quill.min.js"></script>
 <script src="js/jquery.js"></script>
 <script>
-    let quill = new Quill('#editor', {
-        theme: 'snow'
-    });
+    // let quill = new Quill('#editor', {
+    //     theme: 'snow'
+    // });
     const $close = $('.close');
     $close.click(function (e) {
-
-        //$('#popWrite').css('display','none');
-        $('#popEdit').addClass('disappear_view');
+        $('#popWrite').addClass('disappear_view');
     });
+
+
+    $("#writeForm").on("submit",function (e) {
+
+        e.preventDefault();
+        const contents = quill.getContents();
+
+        console.log(contents.ops[0].insert);
+
+        // 첫번째 값이 엔터면 아무것도 글자를 쓰지 않았음
+        if(contents.ops[0].insert=="\n") {
+            alert("글자를 입력해주세요!");
+            return false;
+        }else {
+            const contentString =JSON.stringify(contents);
+            //input type=hidden에 value로 세팅
+            $("#contents").val(contentString);
+            $('#popWrite').addClass('disappear_view');
+            return true;
+        }
+
+    });//#writeForm submit() end
+
+    var quill = new Quill('#editorContainer', {
+        modules: {
+            toolbar: {container:'#toolbar-container',
+                //이미지 선택시 파일 업로드를 위해서
+                // handlers: {
+                //     'image': selectLocalImage
+                // }
+            }
+        },
+        theme: 'snow'
+    });
+
+
+    $("#image_input").on("change",function() {
+
+        const file = this.files[0];
+
+
+        console.log(file);
+
+        //image/ 로 시작하는
+
+        if (/^image\//.test(file.type)) {
+
+            //alert("여기에 오면 파일이 있고 사진임");
+
+            //multipart/form-data에 필요함
+            const formData = new FormData();
+
+            formData.append("uploadImg", file, file.name);
+            formData.append("type", "B");//B는 board의 줄임말
+
+            //여기서 ajax로 파일 업로드 수행
+            $.ajax({
+                url:"ajax/uploadImage.json",
+                processData : false,//multipart/form-data
+                contentType : false,//multipart/form-data
+                data : formData,//multipart/form-data
+                type : 'POST',//multipart/form-data
+                dataType : "json",
+                error : function(xhr, error, code) {
+                    alert("에러:" + code);
+                },
+                success:function(json) {
+                    const range = quill.getSelection();
+                    console.log(range);
+
+                    let idx = 0;
+                    if(range!=null) {
+                        idx = range.index;
+                    }
+                    // image
+                    // delta라는 개념을 하나 만들어라
+                    // 요소를 직접 못넣는다. custom delta
+                    quill.insertEmbed(idx, 'image', json.url);
+                    quill.insertText( quill.getSelection() + 1, ' ', Quill.sources.SILENT);
+
+                }
+            });
+
+
+        } else {
+            alert("이미지를 선택해주세요!");
+        }
+    })
+
+
+    var Size = Quill.import('attributors/style/size');
+    Size.whitelist = ['20px', '28px', '36px','48px'];
+    Quill.register(Size, true);
+
 </script>
 </body>
 </html>
