--- a/create_crew.html
+++ b/create_crew.html
@@ -122,7 +122,7 @@
         <div class="step_progressbar"></div>
     </div>
 </div><!--//header end-->
-<div id="container" class="step2"><!--container start-->
+<div id="container" class="step4"><!--container start-->
     <form method="post">
         <fieldset>
             <div class="step_box">
@@ -594,7 +594,7 @@
 
 <!--객관식 질문 추가-->
 <script type="text/template" id="multipleChoiceTmpl">
-    <li>
+    <li class="question_item">
         <div>
             <label>
                 <span class="question_num"><%=++question%></span><input class="question_input" placeholder='질문명을 입력해 주세요'/>
@@ -610,26 +610,26 @@
         <div>
             <label><span><i class="far fa-dot-circle"></i></span>
                 <input class="answer_input" for="" placeholder='보기를 적어주세요'/>
-                <span class="remove_answer"><i class="far fa-minus-square"></i></span>
             </label>
+            <span class="remove_answer"><i class="far fa-minus-square"></i></span>
         </div>
         <div>
             <label><span><i class="far fa-dot-circle"></i></span>
                 <input class="answer_input" for="" placeholder='보기를 적어주세요'/>
-                <span class="remove_answer"><i class="far fa-minus-square"></i></span>
             </label>
+            <span class="remove_answer"><i class="far fa-minus-square"></i></span>
         </div>
         <div class="add_box"><span class="add_answer"><i class="far fa-plus-square"></i></span></div>
     </li>
 </script>
 <!--//객관식 질문 추가 end-->
-<!--객관식 보기 추가-->
+<!--객관식 보기 추가--><!--2개 이하는 못지움-->
 <script type="text/template" id="multipleChoiceAnswerTmpl">
     <div>
         <label><span><i class="far fa-dot-circle"></i></span>
             <input class="answer_input" for="" placeholder='보기를 적어주세요'/>
-            <span class="remove_answer"><i class="far fa-minus-square"></i></span>
         </label>
+        <span class="remove_answer"><i class="far fa-minus-square"></i></span>
     </div>
     <div class="add_box"><span class="add_answer"><i class="far fa-plus-square"></i></span></div>
 </script>
@@ -647,7 +647,6 @@
             <label>
                 <input class="answer_input" for="" placeholder='(세부사항을 적어주세요)'/>
             </label>
-            <span class="remove_answer"><i class="far fa-minus-square"></i></span>
         </div>
     </li>
 </script>
@@ -670,7 +669,6 @@
     </li>
 </script>
 <!--//파일첨부 질문 추가 end-->
-
 
 
 <script src="js/jquery.js"></script>
@@ -697,7 +695,7 @@
 
     $('.next_btn').click(changeStep);
 
-    $(".category_detail_item").change(changeStep);
+
 
     $prevBtn.click(function () {
         $("#container").attr("class","step"+ --idx);
@@ -715,6 +713,12 @@
     };
     /* step change end*/
 
+    let categoryPath="";
+    /*step1 start*/
+    const $categoryInput = $('.category_detail_item input');
+
+
+    /*step1 end*/
 
 </script>
 </body>
