--- a/가입신청폼.html
+++ b/가입신청폼.html
@@ -85,6 +85,7 @@
             top:5px;
             font-size: 20px;
             cursor: pointer;
+            color: #757575;
         }
         .person_info_box{
             position: relative;
@@ -135,10 +136,10 @@
             </div>
         </div>
         <div class="confirm_box">
-            <h4>승인까지 남은 시간 <span class="remain_time">24:07:35</span></h4>
+            <h4>승인까지 남은 시간 <span class="remain_time"></span></h4>
             <div class="confirm_btn_box"><!-- 기본이 submit이라 막아야해-->
-                <button type="button" class="prev_btn"><a>가입 승인</a></button>
-                <button type="button" class="next_btn">가입 거절</button>
+                <button type="button" class="next_btn"><a>가입 승인</a></button>
+                <button type="button" class="prev_btn">가입 거절</button>
             </div>
         </div>
     </div>
@@ -146,6 +147,7 @@
     <div class="close"><i class="fas fa-times"></i></div>
 </div>
 <script src="js/jquery.js"></script>
+<script src="js/moment-with-locales.js"></script>
 <script>
     const $close = $('.close');
     $close.click(function (e) {
@@ -154,7 +156,33 @@
     const $nextBtn = $('.next_btn');
     $nextBtn.click(function(e) {
         confirm("가입을 승인하시겠습니까?");
-    })
+    });
+
+    let tomorrow = moment(2020,12,29,14,0,0);
+    function displaytime(){
+        //  Date객체 생성 (
+        let now = moment();
+
+        //  역사 1900년대 사람들은 2000년대를 고려하지 않고 getYear라는 함수를 만들었었음
+
+        let tmp = moment.duration(now.diff(tomorrow)).asMinutes();
+        console.log(tmp);
+
+
+        let seconds = moment.duration(now.diff(tomorrow)).seconds();
+        let minute = moment.duration(now.diff(tomorrow)).minutes();
+        let hour = moment.duration(now.diff(tomorrow)).hours();
+
+        //일 얻기 (주의 getDay면 1주일 월화~~일) 이거 얻어오는 거임
+
+        const fullTime =  hour+":" + minute+":" + seconds;
+        console.log(hour + " : " + minute+ " : "+ seconds);
+        $(".remain_time").text(fullTime);
+
+    }//displayTime() end
+    setInterval(function (){
+        displaytime();
+    },1000);
 </script>
 </body>
 </html>
