--- a/글쓰기.html
+++ b/글쓰기.html
@@ -95,6 +95,7 @@
             font-size: 20px;
         }
         .close{
+            color: #757575;
             position:absolute;
             right:30px;
             top:20px;
@@ -109,6 +110,31 @@
         p>img:hover{
             border: 5px solid #00C853;
         }
+        .ql-editor strong{
+            font-weight:bold;
+        }
+        .ql-editor em{
+            font-style:italic;
+        }
+        .file_item{
+            position: relative;
+            width: 128px;
+            height: 38px;
+            border: 1px solid #00C853;
+            margin:5px 0;
+            padding: 8px 10px;
+            display: inline-block;
+        }
+        .file_item h4{
+            margin-bottom: 5px;
+            color: #00C853;
+        }
+        .remove_question{
+            cursor: pointer;
+            position:absolute;
+            right: -5px;
+            top: -5px;
+        }
     </style>
 </head>
 <body>
@@ -120,21 +146,29 @@
             <h2>글쓰기</h2>
             <div id="standalone-container">
                 <div id="toolbar-container">
-                    <span class="ql-formats">
+<!--                    <span class="ql-formats">-->
                       <select class="ql-size">
                         <option>20px</option>
                         <option>28px</option>
                         <option>36px</option>
                         <option>48px</option>
                       </select>
-                    </span>
-                    <span class="ql-formats">
-                      <button class="ql-bold"></button>
-                      <button class="ql-italic"></button>
-                      <button class="ql-underline"></button>
-                      <button class="ql-strike"></button>
-                    <select class="ql-color"></select>
-                    </span>
+<!--                    </span>-->
+<!--                    <span class="ql-formats">-->
+                      <button class="ql-bold" data-toggle="tooltip" data-placement="bottom" title="Bold"></button>
+                      <button class="ql-italic" data-toggle="tooltip" data-placement="bottom" title="Italic"></button>
+                      <button class="ql-underline" data-toggle="tooltip" data-placement="bottom" title="Underline"></button>
+                      <button class="ql-strike" data-toggle="tooltip" data-placement="bottom" title="Strike"></button>
+                    <select class="ql-color">
+                         <option selected></option>
+                      <option value="red"></option>
+                      <option value="orange"></option>
+                      <option value="yellow"></option>
+                      <option value="green"></option>
+                      <option value="blue"></option>
+                      <option value="purple"></option>
+                    </select>
+<!--                    </span>-->
 <!--                                    <span class="ql-formats">-->
 <!--                      -->
 <!--                      <select class="ql-background"></select>-->
@@ -154,6 +188,9 @@
                 </div>
                 <!-- 에디터 감싸는 컨테이너 -->
                 <div id="editorContainer"></div>
+                    <div class="file_box">
+                        <ul class="file_list"></ul>
+                    </div>
                     <!-- 에디터 -->
                     <div class="editor_upload_box">
                         <ul class="editor_write_images">
@@ -183,6 +220,15 @@
         </fieldset>
     </form>
 </div>
+<!--파일 밑부분 추가-->
+<script type="text/template" id="fileAttachmentTmpl">
+    <li class="file_item">
+        <h4>파일</h4>
+        <h3>bold-solid.svg</h3>
+        <span class="remove_question"><i class="fas fa-times"></i></span>
+    </li>
+</script>
+<script src="js/underscore-min.js"></script>
 <script src="js/quill.core.js"></script>
 <script src="js/quill.min.js"></script>
 <script src="js/jquery.js"></script>
@@ -219,12 +265,17 @@
 
     var quill = new Quill('#editorContainer', {
         modules: {
-            toolbar: {container:'#toolbar-container',
+            toolbar: {
+
+                container: '#toolbar-container',
+
                 //이미지 선택시 파일 업로드를 위해서
                 // handlers: {
                 //     'image': selectLocalImage
                 // }
             }
+
+
         },
         theme: 'snow'
     });
@@ -283,10 +334,54 @@
         }
     })
 
+    $("#file_input").on("change",function() {
+
+        const file = this.files[0];
+
+
+        console.log(file);
+
+        //image/ 로 시작하는
+        //multipart/form-data에 필요함
+        const formData = new FormData();
+
+        formData.append("uploadImg", file, file.name);
+        formData.append("type", "B");//B는 board의 줄임말
+
+        //여기서 ajax로 파일 업로드 수행
+        $.ajax({
+            url:"ajax/uploadFile.json",
+            processData : false,//multipart/form-data
+            contentType : false,//multipart/form-data
+            data : formData,//multipart/form-data
+            type : 'POST',//multipart/form-data
+            dataType : "json",
+            error : function(xhr, error, code) {
+                alert("에러:" + code);
+            },
+            success:function(json) {
+                const fileAttachmentTmpl = _.template($('#fileAttachmentTmpl').html());
+                $('.file_list').append(fileAttachmentTmpl);
+
+            }
+        });
+
+
+
+    })
+
 
     var Size = Quill.import('attributors/style/size');
     Size.whitelist = ['20px', '28px', '36px','48px'];
     Quill.register(Size, true);
+
+    var ColorClass = Quill.import('attributors/class/color');
+    Quill.register(ColorClass, true);
+
+    $(document).on("click", '.remove_question',function (e) {
+        console.log("click");
+        $(this).parent().remove();
+    });
 
 </script>
 </body>
